--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-  <meta charset="utf-8">
-  <meta name = "viewport" content = "width=device-width, initial-scale = 1">
-    <title><%= title %></title>
-    <!--CSS SECTION-->
-    <link rel="stylesheet" href="/scripts/lib/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/scripts/lib/bootstrap/dist/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/scripts/lib/font-awesome/css/font-awesome.min.css">
-    <link rel='stylesheet' href='/content/app.css' />
-  </head>
-  <body>
+<% include partials/header.ejs %>
+
     <!--MAIN CONTENT-->
     <div class="container">
       <div class="row">
         <div class="col-md-offset-3 col-md-6">
           <h1><%= title %></h1>
-            <p>Welcome to <%= title %></p>
-            <p>The time is: <%= date %></p>
-          
+            <p>Welcome to <%= title %></p>          
         </div>
       </div>
     </div>
 
-    <!--JAVASCRIPT SECTION-->
-  <script src="/scripts/lib/jquery/dist/jquery.min.js"></script>
-  <script src="/scripts/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="/scripts/app.js"></script>
-  </body>
-</html>
+<%include partials/footer.ejs %>
+
+ 
